fix: hide scrollbar in .adbantages & .reviews

--- a/sass/media/_media-768.sass
+++ b/sass/media/_media-768.sass
@@ -78,6 +78,10 @@
             padding: 20px 0px 0px 15px
             flex-wrap: nowrap
             overflow-x: scroll
+            -ms-overflow-style: none
+            scrollbar-width: none
+            &::-webkit-scrollbar 
+                display: none
         &__title
             padding-left: 15px
             margin-bottom: 10px
@@ -90,6 +94,10 @@
         &-wrapper
             flex-wrap: nowrap
             overflow-x: scroll
+            -ms-overflow-style: none
+            scrollbar-width: none
+            &::-webkit-scrollbar 
+                display: none
         &__title
             margin-bottom: 30px
         &__card
